--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "4.18.2",
+    "dotenv": "16.4.5",
+    "cors": "2.8.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "path": "^0.12.7",
