--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,9 @@
   "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "4.18.2",
+    "dotenv": "16.4.5",
+    "cors": "2.8.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "otp-generator": "^4.0.1",
